# ScytheEx-Hackathon

./: .gitignore  CODEOFCONDUCT.md  CONTRIBUTE.md  DEVELOPMENT.md  README.md
agent/linux/: Makefile  scytheex-agent
agent/linux/include/: elasticsearch_client.h  log_formatter.h  logger.h
agent/linux/service/: scytheex.service
agent/linux/src/: main.c
ai/: .env.vault  .gitignore  .gitlab-ci-testgenai.yml  README.md  main.py  pyproject.toml
ai-detection-engine/: Dockerfile  main.py
ai-detection-engine/malware _models_module/: README.md
ai-detection-engine/variables/: README.md
ai-detection-engine/variables/Neris/: Flags_Encoder.pkl  scaler.pkl
ai-detection-engine/variables/Rbot/: Flags_Encoder.pkl  Protocol_Encoder.pkl  scaler.pkl
ai-engine/: .gitignore  main.py  pyproject.toml  setup.sh
ai-engine/internal_lib/: dataset_information.py  machine_learning.py
ai-engine/models/: NerisLogreg.pkl  Neris_LogReg_model.pkl  Neris_XGBoost_model.pkl
ai-engine/notebooks/: LogRegNerisProcessing.ipynb
ai-engine/notebooks/Neris/: LogRegNerisModeling.ipynb  LogRegNerisProcessing.ipynb  XGBNerisProcessing.ipynb
ai-engine/notebooks/Rbot/: RbotDataPrep.ipynb  RbotModelling.ipynb
ai-engine/variables/Neris/: Label_Encoder.pkl  Protocol_Encoder.pkl
ai-engine/variables/Rbot/: Label_Encoder.pkl
ai/TestGenAI/: .env.vault  .gitlab-ci-testgenai.yml  pyproject.toml  setup.sh
ai/TestGenAI/data/: TestGeneration.json
ai/TestGenAI/inputs/prompts/: CodeAnalysis.txt
ai/TestGenAI/notebooks/CodeAnalysis/: FineTuning.ipynb
ai/TestGenAI/src/: DataSchemaValidation.py  validate_datasets.py
ai/TestGenAI/zenith_models/: __init__.py  test_generation.py
ai/docs/: zenith_models_README.md
ai/internal_lib/: __init__.py  dataset_information.py  machine_learning.py  plotting.py
ai/models/: 16_XGBoost_model.pkl  XGBoost_model.pkl
ai/notebooks/: DBInputProcessing.ipynb  NerisProcessing copy.ipynb  NerisProcessing.ipynb  PreProcessing.ipynb
backend/: CMakeLists.txt  docker-compose.yml  main.py  process_data.py  pyproject.toml  requirements.txt  results.py  scytheex.service  scytheex_backend  start_redis.sh  test.py
backend/config/: config.toml
backend/core/: logging.py  packet_capture.py
backend/include/: connection_tracker.h  dur.h  ftp_tracker.h  http_tracker.h  proto.h  service.h  state.h  tcp_utils.h
backend/intelligence/: docker-compose.yml  main.py  pyproject.toml
backend/snippets/: results.py
backend/src/: connection_tracker.cpp  dur.cpp  ftp_tracker.cpp  http_tracker.cpp  main.cpp  proto.cpp  service.cpp  state.cpp  tcp_utils.cpp
backend/visual/: docker-compose.yml  prometheus.yml  requirements.txt
dashboard/: index.html  package.json  tailwind.config.js
dashboard/frontend/src/: AppRouter.jsx
dashboard/src/: App.jsx  main.jsx  server.cjs
dashboard/src/components/: Navbar.jsx
deployments/helm/: Chart.yaml  values.yaml
deployments/helm/templates/: deployment.yaml
frontend/: index.html  package.json  tailwind.config.js
frontend/my-app/: package-lock.json  package.json
frontend/my-app/src/: App.js  Chart.jsx
frontend/src/: App.jsx  RedisSubscriber.ts  server.cjs
frontend/src/components/: Navbar.jsx
helm/templates/: configmap.yaml  daemonset.yaml
k8s/: daemonset.yaml  redis-deployment.yaml
sandbox/backend/: main.py  requirements.txt
sandbox/backend/config/: config.toml
sandbox/backend/core/: packet_capture.py
scytheex-agent/: Makefile  scytheex-agent
scytheex-agent/etc/config/: config.yml
scytheex-agent/include/: agent.h  config_manager.h
scytheex-agent/src/: main.c
scytheex-agent/src/logging/: log_formatter.c  (+1 more)
scytheex-server/extensions/: TODO
scytheex-server/src/: CMakeLists.txt  Makefile  main.c
scytheex-server/src/active-response/: active_response.c  active_response.h
scytheex-server/src/analysisd/: analysisd.c  analysisd.h
scytheex-server/src/config/: ini.c  scytheex.conf
scytheex-server/src/core/config/: config.c  config.h  ini.h
scytheex-server/src/core/db/: db.c  schemas.sql  setup_db.c
scytheex-server/src/core/logging/: logging.c  logging.h
scytheex-server/src/core/server/: server.c  server.h
scytheex-server/src/db/: alerts.h  db.h  events.h
scytheex-server/src/example/: agent.py
scytheex-server/src/logcollector/: logcollector.c  logcollector.h
scytheex-server/src/modules/alert-management/: alerts.c  events.c
scytheex-server/src/modules/analysis-engine/: actions.c  actions.h  decoders.c  decoders.h  rule-engine.c  rule-engine.h  rules-loader.c  rules-loader.h
scytheex-server/src/monitord/: monitord.c  monitord.h
scytheex-server/src/remoted/: remoted.c  remoted.h
scytheex-server/src/server/: server.c
service/: pyproject.toml
setup/: debian_linux.sh  setup_windows.bat
src/ai/TestGenAI/: main.py  pyproject.toml
src/ai/TestGenAI/data/: CodeAnalysis.json  CodeSuggestion.json
src/ai/TestGenAI/data/validation/: CodeAnalysisSchema.json
src/ai/TestGenAI/inputs/: codetest.tsx
src/ai/TestGenAI/outputs/: CodeAnalysis_result.xml
src/ai/TestGenAI/src/: DatasetEntry.py  dummy.py
src/ai/TestGenAI/zenith_models/: base_model.py  code_analysis.py  code_suggestion.py
(+18 files in other folders)
