[tool.poetry]
name = "scytheex-backend"
version = "0.1.0"
description = "ScytheEx Backend which connects other components to ensure a continuous workflow"
authors = ["smadi0x86 <smadixd@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
toml = "^0.10.2"
redis = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
