[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["smadi0x86 <smadixd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
scapy = "^2.5.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
