[tool.poetry]
name = "ScytheExThreatIntel"
version = "0.1.0"
description = ""
authors = ["smadi0x86 <smadixd@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
kafka-python = "^2.0.2"
redis = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
